--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,35 +2,61 @@
 @tailwind components;
 @tailwind utilities;
 
+/* inter-regular - latin */
 @font-face {
-  font-family: "GT Walsheim";
-  src: url("/fonts/GTWalsheimRegular.woff2") format("woff2");
-  font-weight: normal;
+  font-family: "Inter";
   font-style: normal;
-  font-display: fallback;
+  font-weight: 400;
+  src: url("/fonts/inter-v12-latin-regular.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("/fonts/inter-v12-latin-regular.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("/fonts/inter-v12-latin-regular.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("/fonts/inter-v12-latin-regular.woff")
+      format("woff"),
+    /* Modern Browsers */ url("/fonts/inter-v12-latin-regular.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */ url("/fonts/inter-v12-latin-regular.svg#Inter")
+      format("svg"); /* Legacy iOS */
 }
 
+/* inter-500 - latin */
 @font-face {
-  font-family: "GT Walsheim Medium";
-  src: url("/fonts/GTWalsheimMedium.woff2") format("woff2");
-  font-weight: medium;
+  font-family: "Inter";
   font-style: normal;
-  font-display: fallback;
+  font-weight: 500;
+  src: url("/fonts/inter-v12-latin-500.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("/fonts/inter-v12-latin-500.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("/fonts/inter-v12-latin-500.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("/fonts/inter-v12-latin-500.woff")
+      format("woff"),
+    /* Modern Browsers */ url("/fonts/inter-v12-latin-500.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */ url("/fonts/inter-v12-latin-500.svg#Inter")
+      format("svg"); /* Legacy iOS */
 }
 
+/* inter-700 - latin */
 @font-face {
-  font-family: "GT Walsheim Bold";
-  src: url("/fonts/GTWalsheimBold.woff2") format("woff2");
-  font-weight: bold;
+  font-family: "Inter";
   font-style: normal;
-  font-display: fallback;
+  font-weight: 700;
+  src: url("/fonts/inter-v12-latin-700.eot"); /* IE9 Compat Modes */
+  src: local(""),
+    url("/fonts/inter-v12-latin-700.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("/fonts/inter-v12-latin-700.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("/fonts/inter-v12-latin-700.woff")
+      format("woff"),
+    /* Modern Browsers */ url("/fonts/inter-v12-latin-700.ttf")
+      format("truetype"),
+    /* Safari, Android, iOS */ url("/fonts/inter-v12-latin-700.svg#Inter")
+      format("svg"); /* Legacy iOS */
 }
 
 html,
 body {
-  font-family: "GT Walsheim", system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   scroll-behavior: smooth;
   color-scheme: dark;
   text-rendering: optimizelegibility;
@@ -39,18 +65,6 @@ body {
 
 .pixelated {
   image-rendering: pixelated;
-}
-
-.bold-text {
-  font-family: "GT Walsheim Bold", system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
-}
-
-.medium-text {
-  font-family: "GT Walsheim Medium", system-ui, -apple-system,
-    BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-    "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 @import url("mdx.css");
